[package]
name = "crabmancake"
version = "0.1.0"
authors = ["Trenton Andres <trenton.andres@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
localhost = []

[dependencies]
console_log = "0.1"
console_error_panic_hook = "0.1"
git-version = "0.3"
image = {version = "0.23.12", default-features=false, features = ["jpeg", "png"]}
js-sys = "0.3"
log = "0.4"
nalgebra = "0.18.0"
futures = "0.3"
thiserror = "1.0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.18"
wasm-streams = "0.1"
lazy_static = "1.3.0"
gltf = {version = "0.15", features = ["names"]}

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'Headers',
  'HtmlElement',
  'HtmlButtonElement',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlOptionElement',
  'HtmlLabelElement',
  'KeyboardEvent',
  'InputEvent',
  'Location',
  'MouseEvent',
  'Node',
  'ReadableStream',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlShader',
  'WebGlTexture',
]

