[package]
name = "crabmancake"
version = "0.1.0"
authors = ["Trenton Andres <trenton.andres@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
localhost = []

[dependencies]
console_log = "0.1"
console_error_panic_hook = "0.1"
git-version = "0.3"
image = {version = "0.23.12", default-features=false, features = ["jpeg", "png"]}
js-sys = "0.3"
log = "0.4"
futures = "0.3"
thiserror = "1.0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.18"
lazy_static = "1.3.0"
rand = { version = "0.7", features = ["wasm-bindgen"] }
yew = "0.17"
nphysics3d = {version = "0.19", default-features = false, features = ["dim3", "use-wasm-bindgen"] }
generational-arena = "0.2"
anyhow = "1.0"
serde = "1.0.123"
serde_json = "1.0.62"
reqwest = {version = "0.11.0", features = ["json"]}

[dependencies.gltf]
version = "0.15"
default-features = false
features = ['names']

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'Headers',
  'HtmlElement',
  'HtmlButtonElement',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlOptionElement',
  'HtmlLabelElement',
  'KeyboardEvent',
  'InputEvent',
  'Location',
  'MouseEvent',
  'Node',
  'ReadableStream',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlShader',
  'WebGlTexture',
]

[build-dependencies]
gltf = {version = "0.15"}
serde = "1.0.123"
serde_json = "1.0.62"
